Removed the length of the array + 1

--- a/src/main.html
+++ b/src/main.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript">
 		var colorArray = [ "blue", "cyan", "gold", "gray", "green", "magenta",
 				"orange", "red", "white", "yellow" ];
-		var randomIndex = Math.floor(Math.random() * (colorArray.length + 1));
+		var randomIndex = Math.floor(Math.random() * colorArray.length);
 		console.log(randomIndex);
 		var randomColor = colorArray[randomIndex];
 		console.log(randomColor);
