Condensed some code logic

--- a/src/main.html
+++ b/src/main.html
@@ -8,8 +8,7 @@
 	<script type="text/javascript">
 		var colorArray = [ "blue", "cyan", "gold", "gray", "green", "magenta",
 				"orange", "red", "white", "yellow" ];
-		var randomIndex = Math.floor(Math.random() * colorArray.length);
-		console.log(randomIndex);
+		console.log(Math.floor(Math.random() * colorArray.length));
 		var randomColor = colorArray[randomIndex];
 		console.log(randomColor);
 		var guessCounter = 0;
